<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<Button android:text="@string/view_and_edit_emergency_info" android:id="@+id/EmergencyInfoButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
	<Button android:text="@string/change_application_settings" android:id="@+id/ApplicationSettingsButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
  <Button android:text="@string/contact_picker" android:id="@+id/ContactPickerButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
  <Button android:text="@string/i_am_not_ok_start" android:id="@+id/IAmNotOKStartButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
</LinearLayout>
